# MiniMAUV-software

./: LICENSE  README.md
BeagleBone_Blue_catkin_ws/src/: bbbl_hierarchy.txt  readme_master.txt  topics_messages.txt
BeagleBone_Blue_catkin_ws/src/control/: CMakeLists.txt  package.xml  readme_control.txt
BeagleBone_Blue_catkin_ws/src/cpptests/: CMakeLists.txt  package.xml
BeagleBone_Blue_catkin_ws/src/cpptests/src/: Bar30.cpp  VIsensor.cpp  i2ctest2.cpp  mauvADC_check.cpp  mauvSystemsCheck.cpp  rc_calibrate_gyro.cpp  rc_calibrate_mag.cpp  rosIMUServo.cpp  testButton.cpp  testIMUServo.cpp  testServo.cpp  testServo.cpp.save
BeagleBone_Blue_catkin_ws/src/data/: CMakeLists.txt  data.launch  package.xml
BeagleBone_Blue_catkin_ws/src/data/include/: Bar30.h
BeagleBone_Blue_catkin_ws/src/data/src/: Bar30.cpp  filtering.cpp  imu_mpu.cpp  pt_sensors.cpp  rc_calibrate_accel.cpp  recording.cpp  vi_sensors.cpp
BeagleBone_Blue_catkin_ws/src/drivers/: CMakeLists.txt  drivers.launch  package.xml  readme_data.txt  readme_drivers.txt
BeagleBone_Blue_catkin_ws/src/drivers/src/: dtt.cpp  leaksensors.cpp  mauv_heartbeat.cpp  moving_mass.cpp  pwm_outs.cpp  vbs.cpp
BeagleBone_Blue_catkin_ws/src/launch/: data.launch  drivers.launch  mission.launch
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Linux/GX3-35/GX3_35_Test/: GX3_35_Test.c  mip_sdk_user_functions.c
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Linux/GX3-45/GX3_45_Test/: GX3_45_Test.c
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Linux/GX4-15/GX4_15_Test/: GX4-15_Test.c  GX4-15_Test.h
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Linux/GX4-25/GX4_25_Test/: GX4-25_Test.c  mip_sdk_user_functions.c
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Linux/GX4-45/GX4_45_Test/: GX4-45_Test.c  GX4-45_Test.h
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Linux/RQ1/RQ1_Test/: RQ1_Test.h  mip_sdk_user_functions.c  mip_sdk_user_functions.h
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Windows/GX3-35/GX3_35_Test/: GX3_35_Test.c  GX3_35_Test.sln  GX3_35_Test.vcproj  ReadMe.txt  mip_sdk_user_functions.c
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Windows/GX3-45/GX3_45_Test/: GX3_45_Test.c  GX3_45_Test.sln  GX3_45_Test.vcproj  ReadMe.txt
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Windows/GX4-15/GX4-15_Test/: GX4-15_Test.h  GX4-15_Test.sln  GX4-15_Test.vcxproj  GX4-15_Test.vcxproj.filters  ReadMe.txt  mip_sdk_user_functions.h
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Windows/GX4-25/GX4-25_Test/: GX4-25_Test.c  GX4-25_Test.h  GX4-25_Test.sln  GX4-25_Test.vcxproj  GX4-25_Test.vcxproj.filters  ReadMe.txt  mip_sdk_user_functions.h
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Windows/GX4-45/GX4-45_Test/: GX4-45_Test.c  GX4-45_Test.h  GX4-45_Test.sln  GX4-45_Test.vcxproj  GX4-45_Test.vcxproj.filters  ReadMe.txt  mip_sdk_user_functions.c  mip_sdk_user_functions.h
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/MIPSDK/C/Examples/Windows/RQ1/RQ1_Test/: RQ1_Test.c  RQ1_Test.h  RQ1_Test.sln  RQ1_Test.vcxproj  RQ1_Test.vcxproj.filters  ReadMe.txt
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/include/microstrain_mips/: GX4-25_Test.h  GX4-45_Test.h
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/launch/: microstrain.launch
BeagleBone_Blue_catkin_ws/src/microstrain_mips-master/src/: GX4-45_Test.c  GX4-45_Test.cpp
BeagleBone_Blue_catkin_ws/src/navigation/: CMakeLists.txt  mission.launch  package.xml  readme_navigation.txt  test.launch
BeagleBone_Blue_catkin_ws/src/navigation/src/: mauv_brain.cpp  path_planning.cpp  prototype_mission_1.cpp  prototype_mission_2.cpp  prototype_mission_3.cpp  prototype_mission_4_1.cpp  prototype_mission_4_2.cpp  prototype_mission_4_3.cpp  prototype_mission_5.cpp  prototype_mission_6.cpp
